# maup-solutions

./: .gitignore  README.md
.utils/: change-font.sh
Іноземна_мова/: 2.docx  3.docx  4.docx  5-1.docx  5-2.docx  6-1.docx  6-2.docx
Бази_даних/: .gitignore
Бази_даних/1/: README.adoc
Компʼютерна_графіка/: pyproject.toml
Компʼютерна_графіка/1/: README.adoc  main.py
Компʼютерна_графіка/2/: README.adoc
Компʼютерна_графіка/3/: README.adoc
Компʼютерна_графіка/4/: README.adoc  main.py
Компʼютерна_графіка/5/: README.adoc  main.py
Компʼютерна_графіка/6/: README.adoc  main.py
Основи_академічного_письма/: 0,ЗМІСТ Основи академічного письма (МАУП).docx  1.docx  До теми 3. Практичне завдання.docx  Тест до теми 3.docx  Тест до теми 4.docx  Тест до теми 5.docx  Тест до теми 6.docx  Тести до теми 2.docx
Правознавство/: Верховна_Рада_України_єдиний_орган_законодавчої_влади_в_Україні.docx  Конституційне_право_України_–_провідна_галузь_права_ (1).docx  Конституційно_–_правові_форми_народовладдя_в_Україні_.docx  Основи_адміністративно_правового_регулювання.docx  Перевірка.docx  Поняття та ознаки права (1).docx  Правовий_статус_людини_і_громадянина_в_Україні_.docx  Правопорушення_та_юридична_відповідальність_.docx  Практичні+заняття+1.pages  Реферат (1).docx  Реферат (1).pages  Тема 1.  Держава і право (1).docx  Тема 1.  Держава і право (1).pages  Тести до Л-1.1.docx
Соціально-політичні_студії/: 1.pages  10.docx  10.pages  2.docx  2.pages  3.docx  3.pages  4.docx  4.pages  5.docx  5.pages  6.docx  6.pages  7.pages  8.docx  8.pages  9.docx  9.pages
(+50 files in other folders)
