[tool.poetry]
name = "computer-graphics"
version = "0.1.0"
description = ""
authors = ["Dmytro Soltysiuk <dimasoltusyuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
